# provekit

./: .bazelignore  .bazelrc  .gitignore  .gitleaks.toml  .neurallogignore  ARCHITECTURE.md  BUILD.bazel  CODE-VS-DICTIONARY.md  DOMAIN-INVENTORY.md  LANDING.md  MODULE.bazel  Makefile  PITCH.md  POSTMORTEM.md  PRODUCT.md  README.md  RETROSPECTIVE.md  SHARED-LANGUAGE.md  SIGNALS.md  SPEC.md  SUGAR-RENAME-CHARTER.md  THESIS.md  bool_cell_c_cell_pin.rs  c_bool_cell_get.contract.json  c_bool_cell_new.contract.json  c_bool_cell_set.contract.json  cids.tsv  drizzle.config.ts  hash_contracts.sh  mint_bool_cell.py  mint_result_bind.py  package-lock.json  package.json  package.json.bak  pnpm-lock.yaml  prompts.db  provekit.config.yaml  result_bind_c_cell_pin.rs  smt2_verification_contracts.smt2  sugar-release.toml  (+14 more)
examples/oracle-hover-fixture/: Cargo.toml
examples/panic-freedom-fixture/: .gitignore  Cargo.toml
examples/provekit-rpc-minimal/: Cargo.toml
examples/provekit-shim-blake3-rust/: Cargo.toml  blake3-512:44181ba8512a66d89b4e3ad95ba57ab6568ba01d4782e2e9be3556182c435134a3da6be3b2bb42f60eacb67010d0daecfe0d444e1167f29834f21c3f99dda04b.proof  blake3-512:61d854968e099ae91e905e11e807a3a6d17b4ff3b42a905c605ce4803729e1926a60d6cb87022dd7f46e742f774a096adb58eeebe80671a2c8152abc4670fd2d.proof  blake3-512:6fba6c86887a115ec0cf93f376e1b3e77a5e2f889e2aee7bfd8b670630400acd5d6878baf7dc68463d05da63e1ad2e6604aef8525c536d2e569b03cdbdf7de81.proof  blake3-512:71a206b513f6bfa5e5500616e5daf92d692c760299aba39c5043ae1cfb6e323181bbf27008d21381bb147d655c2941e1be5e0a7afbc6de39f5e761b18efae684.proof  blake3-512:8ea2e1032f7f9354bf3a1e3aa50d5c0f7f8d21ea3feef451ebb14ef3791039c8741c86fd24195a07afd8b2691c3b3504466f6753946d27d818d7cfbe6f887970.proof  blake3-512:957c8b22272c5abc448dfb0183a302d1f13cfad7b108c2a43625d25d4cf6cd4e61ac05916ce9b29d0c329ef51de2e915096b5c858b18ff4fe57fd8df8a382128.proof  blake3-512:b842c425759fb41c74f81cc291e65c27344b41636dea1ceaa88ab0ed60321e4bfd521838264d8e34604ab2850860588038ff4342a1b7cb66e4cc8412e45dbbdb.proof  blake3-512:dbb284e0c5669518d3073db25e247b759b38b23bf2daaddeaf8c98d6626a4dc867d89650766fe83ab968280f04a805d2e8b6b09d73656867791b1d3452a4287b.proof  blake3-512:e22a3b192441dacc13285020bc722100308fdb616f2dbe52be749b19a6203cca0b707c3ae7309d025921d34dab32c42248549f97f47b3c649b6ceb95934a1455.proof  blake3-512:eea0386539e1f81b3409bc3ba1d4c225b5dde242e50d646a7c2727ca554816646ccb78e0de7026f91b4668fa0f9291e344fe0c1fff75b806d855810840310693.proof  blake3-512:f049bd92457287fbd59107486aad3addb613ddc42a61ea996e6080f5c52550045ea5d850cc979f632afaa495a63f68ff6edd90005da235cdff6fc524f8cd8ccd.proof
examples/provekit-shim-numpy/: README.md  pyproject.toml
examples/provekit-shim-postgres/: Cargo.toml  blake3-512:7daa11e4331386107779a872c66e886e0b71c75bec1a150daa4f86676b2a304002b3ee3c3598b46b47976e85a33afd15aea038a6b47b976c5b26603862cdffec.proof  blake3-512:8268fc8fe5837606c503d7576bd62c13925eb28cb4d9a57b1d44b1c6e2cdf8837617ee996343a76b10e8626074bba4fe2f6ab7ebf3ce235352de5af1a39f3ff7.proof
examples/provekit-shim-python-aiosqlite/: README.md  blake3-512:a0097b1c85fc848acd9a5979a9f0f790fce7cd143a270fa1492f4be0af7c924f53a9f79efdb9f99d65d4fee3e52911678a2e8779a494f533a47dc2cf44e90c9f.proof  pyproject.toml
examples/provekit-shim-python-requests/: README.md  blake3-512:1de8dc220245b0eb456e560df9bdb4e023847ccff351ae24a5be9b3259eacfb63fbb39baa590f130e249efcee605e1304033ffbd78751e96e926aa62d492d44b.proof  blake3-512:5c59c1475312c3b1afb94c225fd70479da5f439eecf20aae4fb4401989bc17b7f7d895119c9ea8720865e50110cbe8742bde32510ff425d15fe75bd83bd8c9c8.proof  pyproject.toml
examples/provekit-shim-python-sqlite3/: README.md  blake3-512:0fdacfdfb11a4a4b203b5724bc5655a7802af8f098f5417752fe5f421d5b30d2a3ec209a1086bcfa472ef2d9b0f35c29fb3f80e976e25e122a7031e11b55dbe9.proof  blake3-512:2e243403fb379f7dbb7a11d6306ae8bbbf09916c13868bcb1629fa65f228ff86860d7b777fc9eccbee9fa6e451149aae6cb1af3bdac404a58b6eb73cb986f65f.proof  blake3-512:619a91986dbd98e8a3a3c12fc4a43c20f529d77a3973f1a5f6e7a92295b0b408070c140af8402c8734a61262c48fc7651fbda822d61c0e709061c3037df0f975.proof  blake3-512:bbfb3897d95c83c5ed9966a33941d0fcf8443852a83e5535eef0fcea82f1c8e75fd480f22b3a554d05a2a7734c650bd8fe0345f36d16b27023ed2f9ec1f57321.proof  blake3-512:cd4b99ea389ddd1d1cff1f3f9732648f9a1d294ece0d9ffb3d56efe56f9663ca16f5381ebe9bc5d383a0a56b5b62b8c1ce9629afc222538f383df6f64ff05353.proof  provekit.proof  pyproject.toml
examples/provekit-shim-reqwest-rust/: Cargo.toml  blake3-512:4d37644b18a007b91e6e8ac0502104dd63f2fd0802ff4425eef750f22cf64046084521f987c9f51aa782c377daaa821dfcf69e15a6698761f3616b9de6ed1e0d.proof
examples/provekit-shim-rfc8785-jcs-rust/: Cargo.toml  blake3-512:08f34a1459fb40732a8dc3a43a4f72603fbc373648d2663d0b9176db8c2e296bc3497dc3496539eba7fafa21d35cd1312e7cfd2d0ba167b75afe5f57cefb8996.proof  blake3-512:0e91d4f3f7e0464b60a6da66dd99cdefa18aabe31f67b01c972885ce5f28a54a561cea27c9e0ae3a284d793473e5662ca2be1a7f8b39957cd48f4745bbf1229c.proof  blake3-512:17120b3d4e31d200448de2e086457cca1b119fee50526bccd6b1b151c139b0fc5421f754ce025c71aea5d4d5c55db89fa4c5e407eae165dfcd2181d32395fe08.proof  blake3-512:2a5e5feeb4557784e8b9fa6d7dbe8510811aebe7cefa7ed792b4317ed0964f21c18546da427c1ca96f1435f01d79c41aa284034fe844ee4bc21833c09b2e4221.proof  blake3-512:38860db6bacac979dd3d580761e36e9e4630c6c372ddcfbdec1c70b53a5b339377c55e9ccf8a5c021178ce4e88fad290ca102774df6f14c6c257d7bac9709baa.proof  blake3-512:3f41cafd397ca595453b99ce385a23ba3bad8529c39c0bf63614479085130f6423af5719c03f974aabd0de74deda0ee53f1783c2bd7b1757fff0c28056b7cf87.proof  blake3-512:9c68719e847e23e9b30487e5455801360975fdf6713ab27a1839d1477d4109f76c0f026c0707db62dea109a370aaa4ae7314342328125191425b46586679f146.proof  blake3-512:a9d2c86a270ae46416d58d3fa45a800db959c2a4dfe6af300908210750219c5e85c7e0d86b496007c92c34061c54b99c119185c338639c088a7df77d09867450.proof  blake3-512:aad5f26c2ab6f2bd2a4bab1b5bfea7dee6843e2497289ffe2be3c903de630c37c796d2f107781d70302a6c640a987955fbad87995cf33681d2dc931ecb92182c.proof  (+3 more)
examples/provekit-shim-rusqlite/: Cargo.toml  provekit.proof  (+2 more)
menagerie/bug-zoo/: README.md  (+2 more)
(+11353 files in other folders)
