[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provekit-shim-numpy"
version = "0.1.0"
description = "ProvekIt sugar shim for numpy. Symbol-keyed, concept-free, sugar-only: carries body_text + ast_template for each numpy operation (numpy.add, ...). Contracts are NOT here — they come from numpy's own test suite; the CLI marries sugar and contract by symbol at the linker."
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "ProvekIt" }]
keywords = ["numpy", "provekit", "proofchain", "sugar", "boundary-realization"]
classifiers = ["License :: OSI Approved :: Apache Software License"]

[tool.setuptools.packages.find]
where = ["."]
include = ["provekit_shim_numpy"]
