[package]
name = "provekit-shim-postgres"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "ProvekIt vendored boundary namespace for postgres. Substrate-honest sugar bindings for SQL operations under the postgres Rust driver."
repository = "https://github.com/TSavo/provekit"
keywords = ["postgres", "sql", "provekit", "proofchain", "boundary-realization"]
categories = ["database"]

[dependencies]
postgres = "0.19"
provekit = { package = "provekit-sugar", path = "../../implementations/rust/provekit-sugar" }
