[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provekit-shim-python-aiosqlite"
version = "0.1.0"
description = "ProvekIt vendored boundary namespace for the Python aiosqlite async SQLite driver. Substrate-honest sugar bindings for async SQLite operations. The async mirror of provekit-shim-python-sqlite3: same concept names, async (`await`/`async with`) bodies, `sync-vs-async` dropped from loss because aiosqlite IS the async kit. Concept names signed by the kit author; loss-record contributions declared per binding; refused boundaries signed as signposts."
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "ProvekIt" }]
keywords = ["sqlite", "aiosqlite", "async", "provekit", "proofchain", "boundary-realization"]
classifiers = ["License :: OSI Approved :: Apache Software License"]

[tool.setuptools.packages.find]
where = ["."]
include = ["provekit_shim_python_aiosqlite"]
