[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "provekit-shim-python-requests"
version = "0.1.0"
description = "ProvekIt vendored boundary namespace for Python requests. Substrate-honest sugar bindings for HTTP request and response operations, with bounded loss declared per binding and refused carrier surfaces signed as signposts."
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "ProvekIt" }]
dependencies = ["requests>=2"]
keywords = ["http", "requests", "provekit", "proofchain", "boundary-realization"]
classifiers = ["License :: OSI Approved :: Apache Software License"]

[tool.hatch.build.targets.wheel]
packages = ["provekit_shim_python_requests"]
