[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "provekit-shim-python-sqlite3"
version = "0.1.0"
description = "ProvekIt vendored boundary namespace for Python stdlib sqlite3. Substrate-honest sugar bindings for SQLite operations under the Python sqlite3 driver. Concept names signed by the kit author; loss-record contributions declared per binding; refused boundaries signed as signposts."
license = { text = "Apache-2.0" }
requires-python = ">=3.8"
authors = [{ name = "ProvekIt" }]
keywords = ["sqlite", "sqlite3", "provekit", "proofchain", "boundary-realization"]
classifiers = ["License :: OSI Approved :: Apache Software License"]

[tool.setuptools.packages.find]
where = ["."]
include = ["provekit_shim_python_sqlite3"]
