[package]
name = "provekit-shim-reqwest-rust"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "ProvekIt Rust reqwest shim for HTTP request materialization."
repository = "https://github.com/TSavo/provekit"

[dependencies]
provekit = { package = "provekit-sugar", path = "../../implementations/rust/provekit-sugar" }
reqwest = { version = "0.12", default-features = false }
