[package]
name = "provekit-shim-rusqlite"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "ProvekIt vendored boundary namespace for rusqlite. Substrate-honest sugar bindings for SQLite operations under the rusqlite Rust driver. Concept names signed by the kit author; loss-record contributions declared per binding; refused boundaries signed as signposts."
repository = "https://github.com/TSavo/provekit"
keywords = ["sqlite", "rusqlite", "provekit", "proofchain", "boundary-realization"]
categories = ["database"]

[dependencies]
# `bundled`: compile SQLite from the amalgamation and link it statically, so
# the build never depends on a system `libsqlite3.so` being discoverable by the
# linker. The self-hosted runner fleet is heterogeneous (lld doesn't always get
# `/usr/lib/x86_64-linux-gnu` on its search path), which intermittently broke
# `-lsqlite3` resolution in build-rust. Bundled makes the build runner-independent.
rusqlite = { version = "0.39", features = ["bundled"] }
provekit = { package = "provekit-sugar", path = "../../implementations/rust/provekit-sugar" }

[dev-dependencies]
tempfile = "3"
