[package]
name = "provekit-shim-rust-std"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "ProvekIt Rust standard library shim for std Option and Result constructor surfaces."
repository = "https://github.com/TSavo/provekit"

[dependencies]
provekit = { package = "provekit-sugar", path = "../../implementations/rust/provekit-sugar" }
