[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "recognize-demo-python"
version = "0.0.0"
description = "Python recognize verb demo that composes requests and sqlite3 call sites through Sugar shim bindings."
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
dependencies = [
    "requests>=2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
recognize-demo-python = "recognize_demo_python.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]
