[package]
name = "rusqlite-demo-consumer"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Real Rust app that uses rusqlite. Each rusqlite call site carries a ProvekIt concept-citation comment, anchoring the boundary to the provekit-shim-rusqlite .proof envelope (paper 24 §5: composition at the seam IS the trade)."

[[bin]]
name = "rusqlite-demo"
path = "src/main.rs"

[dependencies]
# bundled: static SQLite, no system libsqlite3.so link dependency (runner-independent).
rusqlite = { version = "0.39", features = ["bundled"] }
