[package]
name = "voltron-demo"
version = "0.0.0"
edition = "2021"
license = "Apache-2.0"
description = "M-file two-vendor ProvekIt demo. Threads provekit-shim-serde-json-rust + provekit-shim-rusqlite through one program graph spanning ingest/persist/report modules with user-side contracts. After materialize+mint+prove, the substrate unions THREE .proof envelopes (the demo's own + two vendor lions) and discharges across every cross-vendor seam."

[lib]
name = "voltron_demo"
path = "src/lib.rs"

[[bin]]
name = "voltron-demo"
path = "src/bin/voltron-demo.rs"

[dependencies]
# Bundled SQLite: no system libsqlite3.so link dependency.
rusqlite = { version = "0.39", features = ["bundled"] }
serde_json = "1"
