[workspace]
resolver = "2"
members = [
    "cargo-sugar",
    "sugar-canonicalizer",
    "sugar-plugin-loader",
    "sugar-proof-envelope",
    "sugar-claim-envelope",
    "sugar-ir-symbolic",
    "sugar-ir-types",
    "sugar-ir-compiler",
    "sugar-ir-compiler-smt-lib",
    "sugar-ir-compiler-coq",
    "sugar-ir-compiler-maude",
    "sugar-ir-compiler-lean",
    "sugar-verifier",
    "libsugar",
    "libsugar-rpc",
    "sugar-cli",
    "sugar-lifter",
    "sugar-lift",
    "sugar-lift-contracts",
    "sugar-lift-rpc-client",
    "sugar-lift-rust-cargo-test-witness",
    "sugar-lift-rust-tests",
    "sugar-linker",
    "sugar-lsp",
    "sugar-lsp-rust",
    "sugar-linkerd",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Sugar"]
description = "Sugar Rust peer implementation of protocol v1.1.0."

[workspace.dependencies]
# Hashing
blake3 = "1.5"
# CBOR primitives. We do NOT rely on ciborium for the .proof
# top-level encoding (it does not enforce RFC 8949 §4.2.1 map-key
# sort by bytewise CBOR-encoded form). We hand-roll the small
# amount we need; ciborium is kept available for future decode
# work but is currently unused.
# ciborium = "0.2"
# Signatures
ed25519-dalek = { version = "2.1", default-features = false, features = ["std", "rand_core"] }
sha2 = "0.10" # used by ed25519-dalek's hashing internals; not by us
# Encoding helpers
hex = "0.4"
base64 = "0.22"
# Error handling
thiserror = "1"
# JSON for IR text emission
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
# Verifier glue
walkdir = "2"
toml = "0.8"
rayon = "1.10"
# syn/quote/proc-macro2: AST parsing + token manipulation used by the lift
# adapters (sugar-lift, sugar-lift-contracts, sugar-walk, etc.). NOT a
# contract-authoring macro stack: the substrate ships no bespoke proc-macro.
syn = { version = "2", features = ["full", "extra-traits", "visit"] }
quote = "1"
proc-macro2 = "1"
# Temp dirs/files for kits that compile + run emitted source in tests
tempfile = "3"

[profile.release]
opt-level = 3
lto = false
debug = false
