[package]
name = "provekit-protocol-switchyard"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Protocol Switchyard Menagerie runner: protocol versions as roots, migrations as witnessed edges."
workspace = "../../implementations/rust"

[dependencies]
clap = { version = "4", features = ["derive"] }
provekit-canonicalizer = { path = "../../implementations/rust/provekit-canonicalizer" }
serde = { workspace = true }
serde_json = { workspace = true }

[[bin]]
name = "provekit-protocol-switchyard"
path = "src/main.rs"
