[package]
name = "provekit-supply-chain-rails"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Supply Chain Rails Menagerie runner for package-admission rail receipts."
workspace = "../../implementations/rust"

[dependencies]
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
serde_yaml = "0.9"

[[bin]]
name = "provekit-supply-chain-rails"
path = "src/main.rs"
